--- a/RockWeb/Styles/styles-v2/core.css
+++ b/RockWeb/Styles/styles-v2/core.css
@@ -8096,6 +8096,10 @@ ul.activeusers {
   border-bottom-color: var(--color-interface-soft);
 }
 
+.panel-default:has(.dropdown-menu) {
+  overflow: visible;
+}
+
 .panel-primary {
   border-color: var(--color-primary);
 }
